# genomeocean

./: .dockerignore  .gitignore  LICENSE  README.md  go_generate.py  go_scan.py  pyproject.toml  requirements.in  requirements.txt  setup.py  unittests.py
.github/workflows/: test.yml
apptainer/: Readme.txt  genomeocean.def
benchmarks/: BENCHMARK_REPORT.md  bench_embed_a100.py  bench_gen_a100.py  bench_specdec_a100.py  sbatch_spec.sh  sbatch_v0_embed.sh  sbatch_v0_gen.sh  sbatch_v1_embed.sh  sbatch_v1_gen.sh
benchmarks/results/: embed_v0.json  embed_v1.json  results_v0_genomeocean-4b_tp1.json  results_v0_genomeocean-4b_tp2.json  results_v0_genomeocean-4b_tp4.json  results_v1_genomeocean-4b_tp1.json  results_v1_genomeocean-4b_tp2.json  results_v1_genomeocean-4b_tp4.json  specdec_results.json
docker/: Dockerfile  README.md
examples/: 1_generate_for_structure.py  1_generate_for_structure_batch.py  auto_complete_config_cas9.txt  auto_complete_config_example.txt  auto_complete_config_nigase.txt  autocomplete_structure.py  battle_bot.py  battle_bot_output_seq_49_3.csv  consistent_generated.py  detect_artificial_sequences.py  embedding_sequences.py  generate_sequences.py  genomeOcean_embedding_colab.ipynb  genomescan.py  lddt_scoring.py  lignase-4b-2.bash  lignase-4b.bash  lignase.bash  nigase-4b.bash  nigase.bash  optimize_generation_parameters.py  optimize_prompt_length.py  pairwise_alignment_scoring.py  run_auto_complete_workflow.sh  run_auto_complete_workflow_batch.sh  scan_genome.py  temp_config_seq_1141_1.txt  temp_config_seq_387_3.txt  temp_config_seq_3894_5.txt  test.bash  test_examples.bash  test_model.py  tmp_prompts.csv
genomeocean/: cli.py  dnautils.py  embedding.py  folding.py  generation.py  inference.py  llm_utils.py
genomeocean.egg-info/: requires.txt
sample_data/: dna_sequences.txt
tests/: test_capabilities.py  test_cli.py  test_uv_install.sh
