[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genomeocean"
version = "0.6.0"
description = "A Python library for GenomeOcean inference and fine-tuning."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    {name = "Zhong Wang", email = "zhongwang@lbl.gov"},
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "transformers>=5.12.1",
    "peft",
    "accelerate",
    "pandas",
    "biopython",
    "scikit-learn",
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
generation = [
    # vLLM 0.24+ ships the V1 engine as default (V0 removed in 0.11).
    # ninja is required for FlashInfer JIT compilation on aarch64/GB10.
    "vllm>=0.24.0",
    "ninja",
]
all = [
    "vllm>=0.24.0",
    "ninja",
    "bitsandbytes",
    "pyrodigal",
    "cuda-python",
    "cuda-bindings",
]

[project.urls]
Homepage = "https://github.com/jgi-genomeocean/genomeocean"

[project.scripts]
go-generate = "go_generate:main"
go-scan = "go_scan:main"

[tool.setuptools.packages.find]
include = ["genomeocean*"]
